Target Explorer: More findbugs fixes